# PyDSGEforge

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: default.yaml  hybrid_nk_medium.yaml  nk_example.yaml  nk_full_yaml.yaml  open_economy_nk.yaml  tiny_ar1.yaml
data/: Inflacion.xlsx  an_s_data.txt  hybrid_nk_synthetic.csv  open_economy_nk_synthetic.csv  pib.xlsx  tpm.xlsx
docs/: api.md  index.md  numerical-conventions.md  testing.md  usage.md  yaml_configuration.md
dynare_comprobation/: .gitignore  README.md  nk_colombia.mod  validate.py
dynare_comprobation/data/: colombia_nk_quarterly.csv
dynare_comprobation/reference/: dynare_mode.json  dynare_posterior_draws.csv  parity_metrics.json
notebooks/: showcase_dsge_octave.ipynb  showcase_more_models.ipynb  showcase_yamls.ipynb
outputs/: showcase_report.json
outputs/dynare_comparison/: metrics.json  pydsgeforge_posterior_draws.csv
outputs/hybrid_nk_medium/: posterior_draws.csv  summary.json
outputs/open_economy_nk/: posterior_draws.csv  summary.json
scripts/: build_showcase.py  export_dynare_reference.py  run_pipeline.py
src/: __init__.py  config.py  dgse.py  dsge.py
src/analysis/: __init__.py  impulse_responses.py  mcmc_diagnostics.py
src/inference/: __init__.py  kalman_fast.py  likelihoods.py  map.py  mcmc.py  posteriors.py
src/model_builders/: __init__.py  guess_factory.py  linear_system.py  steady.py
src/solvers/: __init__.py  gensys.py
src/specification/: __init__.py  param_registry_class.py  param_specifications.py
src/transformations/: __init__.py  param_transformations.py
tests/: test_bk_conditions.py  test_forward_looking.py  test_impulse_responses.py  test_inference.py  test_model_builders.py  test_priors.py  test_public_imports.py  test_solvers.py  test_yaml_config.py
