[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydsge"
version = "0.1.0"
description = "Dynare-style DSGE modeling toolkit in Python."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "sympy>=1.12",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -s"
